--- a/package.json
+++ b/package.json
@@ -6,16 +6,35 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "concurrently": "^6.4.0",
+    "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.1.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.5",
+    "rehype-katex": "^6.0.2",
+    "rehype-mathjax": "^4.0.2",
+    "remark-math": "^5.1.1",
+    "wait-on": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "electron": "^15.3.1",
+    "electron-builder": "^22.13.1"
+  },
+  "main": "public/electron.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "react-build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "electron .",
+    "electron-build": "electron-builder",
+    "build": "yarn react-build && yarn electron-build"
   },
   "eslintConfig": {
     "extends": [
